# nanopilot

./: .gitignore  leo_config.yaml
scripts/: deploy.sh  download_sysroot.sh
src/control/attitude_control/: CMakeLists.txt
src/drivers/vectornav/: package.xml  setup.cfg  setup.py
src/install/: local_setup.bash  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/low_level_controller/ros_interface/: CMakeLists.txt  llc_ros_interface.cpp
src/low_level_controller/scripts/: heap_size.py
src/low_level_controller/src/: control_loop.cpp  launch.py
src/trajectory/: package.xml  setup.cfg  setup.py
src/trajectory/trajectory/: angle_pos.txt  angle_positions.txt  foot_positions.mat  foot_positions.txt  generate_single_point.py  generate_traj.py  generate_trajectory.py  inv_kinematics.py  read_trajectories.py
sysroot/lib/: cpp
sysroot/lib/arm-linux-gnueabihf/: libaio.so.1.0.1  libblkid.so.1.1.0  libdns-export.so.1100.1.1  libf2fs.so.4.0.0  libf2fs_format.so.3  libf2fs_format.so.3.0.0  libfdisk.so.1.1.0  libisc-export.so.169.0.1  libmount.so.1.1.0  libnss_myhostname.so.2  libntfs-3g.so.88.0.0  libparted.so.2.0.1  libsmartcols.so.1.1.0  libudev.so.1.6.9
sysroot/lib/netplan/: generate
sysroot/lib/systemd/: systemd  systemd-ac-power  systemd-backlight  systemd-binfmt  systemd-cgroups-agent  systemd-cryptsetup  systemd-dissect  systemd-fsck  systemd-fsckd  systemd-growfs  systemd-hibernate-resume  systemd-hostnamed  systemd-initctl  systemd-journald  systemd-localed  systemd-logind  systemd-makefs  systemd-modules-load  (+20 more)
(+5977 files in other folders)
