
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>trajectory</name>
  <version>0.7.3</version>
  <description>Translating Trajectory to Actuator Positions via Inverse Kinematics</description>

  <maintainer email="stapelzeiger@gmail.com">Patrick Spieler</maintainer>
  <license>BSD</license>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>autopilot_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autopilot_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
